# sheet-company

./: Makefile  main.py  pyproject.toml
base/: __init__.py
lc_types/: __init__.py
moons/: __init__.py  moon.py
moons/data/v35/: data.json
moons/data/v36/: data.json
moons/data/v37/: data.json
moons/data/v38/: data.json
moons/data/v40/: data.json
moons/data/v45/: data.json
moons/data/v47/: data.json
moons/data/v48/: data.json
moons/data/v49/: data.json
moons/data/v50/: data.json
moons/data/v55/: data.json
moons/data/v56/: data.json
moons/data/v61/: data.json
moons/data/v64/: data.json
moons/data/v65/: data.json
moons/data/v66/: data.json
moons/data/v67/: data.json
moons/data/v68/: data.json
moons/data/v69/: data.json
moons/data/v70/: data.json
moons/data/v71/: data.json
moons/data/v72/: data.json
moons/data/v73/: data.json
saves/: manager.py
scrap/: README.md  __init__.py  scrap.py
scrap/data/v35/: data.json
scrap/data/v36/: data.json
scrap/data/v37/: data.json
scrap/data/v38/: data.json
scrap/data/v40/: data.json
scrap/data/v45/: data.json
scrap/data/v47/: data.json
scrap/data/v48/: data.json
scrap/data/v49/: data.json
scrap/data/v50/: data.json
scrap/data/v55/: data.json
scrap/data/v56/: data.json
scrap/data/v61/: data.json
scrap/data/v64/: data.json
scrap/data/v65/: data.json
scrap/data/v66/: data.json
scrap/data/v67/: data.json
scrap/data/v68/: data.json
scrap/data/v69/: data.json
sell/: __init__.py  calculator.py
settings/: __init__.py
util/: __init__.py
(+9 files in other folders)
