[project]
name = "sheet-company"
version = "0.1.0"
description = "A cool little tool to help track Lethal Company HQ runs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncinotify>=4.3.2",
    "click<8.2.0",
    "iterfzf>=1.8.0.62.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.12.0",
    "pydantic-typer>=0.0.13",
    "pydantic-yaml>=1.4.0",
    "pyperclip>=1.11.0",
    "textual>=6.11.0",
    "typer>=0.15.3",
    "xdg-base-dirs>=6.0.2",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ptpython>=3.0.30",
    "ruff>=0.11.9",
    "textual-dev>=1.8.0",
]
